emacs : New 1.9.0-Full - Add dired-subtree minor mode - Add key bindings and customization of dired-mode and dired-subtree - Add prefix command "C-v" for version control

--- a/tag-emacs/emacs.d/org/note.org
+++ b/tag-emacs/emacs.d/org/note.org
@@ -97,6 +97,7 @@ C-h f : Describe a function
 C-h k : Describe a key
 C-h o : Describe a symbol
 C-h v : Describe a variable
+C-h m : Describe a mode
 
 C-x C-c : Quit emacs
 
