--- a/tag-emacs/emacs.d/org/note.org
+++ b/tag-emacs/emacs.d/org/note.org
@@ -1,9 +1,8 @@
+#+title: Emacs usage notes
+#+author: Ludovic Kuzma
+#+date: 2023-08-09
+*Version: 1.3.0*
 * Notes
-** Information
-
-   Author : Ludovic Kuzma
-   Version : 1.2.2
-
 ** Emacs
 *** Emacs Builtin keys
 
@@ -125,9 +124,17 @@
 	S-<right> : Rotate mark right
 	S-<left> : Rotate mark left
 
-	M-shift RET : To insert a TODO heading
+	M-S RET : Insert a TODO
+	M RET : Insert an element
 
 	M-O : Open org agenda
+
+    *In TODO items*
+
+	M-S RET : Insert a checkbox heading
+	M RET : Insert a list heading
+
+	C-c C-c : Toggle a checkbox
 
 *** Helm mode keys
 
@@ -138,7 +145,7 @@
 	M-x : List emacs commands
 	M-m : Open man page
 
-	# Helm gtags mode
+	*Helm gtags mode*
 
 	M-q : List semantic tags
 	M-s t : List tags
@@ -153,7 +160,7 @@
 
 *** Functions args keys
 
-	# C and C++ mode
+	*C and C++ mode*
 
 	C-: : Complete C/C++ statement
 
@@ -161,7 +168,7 @@
 
 	C-x v g : Launch version control interface
 
-	# vc-annotate mode
+	*vc-annotate mode*
 
 	d : Diff of the line revision
 	l : Log message of the line revision
