Emacs: New 2.2.0-Full
- Add a variable to clear the startup screen and activate it
- Fix strange formatting behavior in C/C++ caused by eglot clangd
- Indent C/C++ macro has regular code
- Do not indent the solo ')' after an argument list
- Improve the basic offset indentation documentation

--- a/tag-emacs/emacs.d/org/note.org
+++ b/tag-emacs/emacs.d/org/note.org
@@ -214,13 +214,15 @@ replace-regex : Replace string with regex support
 align-regex : Align the current region with regex support
 eglot-rename : Rename the current symbol (C/C++ mode)
 
-c-set-offset : Display the offset variable used on the current region and
-prompt in order to change it, the special symbols used :
-- "+" : c-basic-offset +1
-- "-" : c-basic-offset -1
-- "0" : no offset
-- "++" : c-basic-offset +2
-- "--" : c-basic-offset -2
+c-set-offset : Display the syntactic element offset on the current
+region and prompt in order to change it.
+The special offsets are:
+- '+'   : c-basic-offset +1
+- '-'   : c-basic-offset -1
+- '0'   : no offset
+- '[0]' : no indentation
+- '++'  : c-basic-offset +2
+- '--'  : c-basic-offset -2
 
 ** C Coding Style
 
